[gd_scene load_steps=9 format=3 uid="uid://d3myhjl1xcfee"]

[ext_resource type="Script" uid="uid://b5ypfwrc255ik" path="res://scene.gd" id="1_nfnuk"]
[ext_resource type="Texture2D" uid="uid://dxfet0jbyo27k" path="res://Asset/sm.jpg" id="2_xlvrw"]
[ext_resource type="Texture2D" uid="uid://bdl3hewmhrprm" path="res://Asset/screen.png" id="3_xlvrw"]
[ext_resource type="Texture2D" uid="uid://dtvb8ysnf0xmm" path="res://Asset/Vance3.png" id="3_y2354"]
[ext_resource type="Texture2D" uid="uid://cwfbo02d7l86e" path="res://Asset/V_spirit.png" id="4_y2354"]
[ext_resource type="Texture2D" uid="uid://dlxpuv5naqsa4" path="res://Asset/egg_2.png" id="5_y2354"]
[ext_resource type="Texture2D" uid="uid://c87fvha5u4p6a" path="res://Asset/keyboard.png" id="6_y2354"]
[ext_resource type="Texture2D" uid="uid://3d5eoseyfg45" path="res://Asset/singleegg.png" id="7_ni31j"]

[node name="Scene" type="Node2D"]
script = ExtResource("1_nfnuk")

[node name="TreeMap" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.309804)
self_modulate = Color(0.701961, 1, 0.701961, 1)
position = Vector2(646.5, 277)
scale = Vector2(0.625177, 0.625177)
texture = ExtResource("2_xlvrw")

[node name="screen" type="Sprite2D" parent="."]
position = Vector2(809.773, 85.1793)
scale = Vector2(0.283379, 0.213369)
texture = ExtResource("3_xlvrw")

[node name="Vance" type="Sprite2D" parent="."]
position = Vector2(521, 349)
scale = Vector2(0.730362, 0.730362)
texture = ExtResource("3_y2354")
hframes = 2

[node name="keyboard" type="Sprite2D" parent="."]
position = Vector2(712, 158)
scale = Vector2(0.236908, 0.146088)
texture = ExtResource("6_y2354")

[node name="VanceFace" type="Sprite2D" parent="."]
position = Vector2(566, 162)
scale = Vector2(0.169527, 0.169527)
texture = ExtResource("4_y2354")
offset = Vector2(1.33337, -188.667)
hframes = 3

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = 125.0
offset_right = 738.0
offset_bottom = 943.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(400, 400)
size_flags_vertical = 4
texture_normal = ExtResource("5_y2354")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = 678.0
offset_top = 9.0
offset_right = 846.0
offset_bottom = 50.0
scale = Vector2(2, 2)
text = "NASDAQ INDEX"

[node name="Label_egg" type="Label" parent="."]
offset_left = 278.0
offset_top = 564.0
offset_right = 314.0
offset_bottom = 587.0
scale = Vector2(2, 2)

[node name="singleegg" type="Sprite2D" parent="."]
position = Vector2(453, 156)
scale = Vector2(0.151177, 0.151177)
texture = ExtResource("7_ni31j")
hframes = 2

[node name="info" type="Label" parent="."]
offset_left = 27.0
offset_top = 23.0
offset_right = 475.0
offset_bottom = 124.0
scale = Vector2(1.4, 1.4)
text = "Vance needs bigger brain to
manipulate the stock market.
Help him!"

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
